--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,35 @@ body {
 .leaf:hover {
   transform: scale(1.2);
 }
+
+.window {
+  position: absolute;
+  visibility: hidden;
+  top:100px;
+  left: 100px;
+  height: 800px;
+  width: 800px;
+  z-index: 10;
+  background-color: rgba(146, 146, 146, 0.647);
+  border-radius: 20px; border: 2px solid #000000;
+}
+
+.window_leaf {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.window_close {
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  top: 10px;
+  left: 740px;
+  background-color: salmon;
+  z-index: 11;
+  border-radius: 10px; border: 2px solid #000000;
+  font-size: 40px;
+  background:
+    linear-gradient(45deg, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 43%,#fff 45%,#fff 55%,rgba(0,0,0,0) 57%,rgba(0,0,0,0) 100%),
+    linear-gradient(135deg, #f56b00 0%,#f56b00 43%,#fff 45%,#fff 55%,#f56b00 57%,#f56b00 100%);
+}
