--- a/styles.css
+++ b/styles.css
@@ -159,3 +159,7 @@ body {
     linear-gradient(45deg, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 43%,#fff 45%,#fff 55%,rgba(0,0,0,0) 57%,rgba(0,0,0,0) 100%),
     linear-gradient(135deg, #f56b00 0%,#f56b00 43%,#fff 45%,#fff 55%,#f56b00 57%,#f56b00 100%);
 }
+
+.window_close:hover {
+  transform: scale(1.2);
+}
