--- a/styles.css
+++ b/styles.css
@@ -150,8 +150,8 @@ body {
   position: absolute;
   height: 50px;
   width: 50px;
-  top: 10px;
-  left: 740px;
+  top: 20px;
+  left: 720px;
   background-color: salmon;
   z-index: 11;
   border-radius: 10px; border: 2px solid #000000;
@@ -164,4 +164,9 @@ body {
 .window_close:hover {
   transform: scale(1.2);
   cursor: pointer;
+}
+
+.plot {
+  max-width: 100%;
+  max-height: 100%;
 }
